# Kinect_facialdepth

./: CMakeCache.txt  CMakeLists.txt  Face_detect_sample.cpp  Makefile  README.md  app  cmake_install.cmake  compile_commands.json  kinect_calibration.cpp  kinect_calibration_depth.cpp  listener  mycalib.yml  mycalib_depth.yml  ros_listener  ros_listener.cpp  stereo_calibration.cpp  xbox_listener.cpp  xbox_listener_lcm.cpp  xbox_tracker  xbox_tracker.cpp  xbox_tracker.cpp.old  xbox_tracker_lcm.cpp
ir_data_pde/: ir_data_pde.pde  ir_stereo.pde
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
